--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -98,7 +98,7 @@
         line-height: 50px;
         margin: 0 0 0 2px;
         &__head {
-            color: #3CCACE;
+          color: #3CCACE;
         }
       }
       &__describe {
@@ -127,10 +127,15 @@
         font-size: 24px;
         line-height: 50px;
         margin: 0 0 0 2px;
-        &--head {
+        &__head {
           color: #3CCACE;
         }
       }
+        &__discribe {
+          font-size: 18px;
+          line-height: 1.5;
+          margin: 16px 0 0;
+        }
     }
   }
 }
