--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -13,36 +13,36 @@
           %img{height: "53.33", src: "/assets/app.svg", width: "180"}/
         %a.mainSection__content__btn__googleBtn{href: "#"}
           %img{height: "53.33", src: "/assets/goo.svg", width: "180"}/
-  .memJapan
-    %h2.memJapan__subttl
+  .reason
+    %h2.reason__subttl
       FURIMAが選ばれる3つの理由
-    %ul.memJapan__lists
-      %li.memJapan__lists__list
-        .memJapan__lists__list__photo
-          %span.memJapan__lists__list__photo__num 1
+    %ul.reason__lists
+      %li.reason__lists__list
+        .reason__lists__list__photo
+          %span.reason__lists__list__photo__num 1
           %img{height: "306", src: "/assets/pict-reason-01-.jpg", width: "306"}/
-        %h3.memJapan__lists__list__txt
-          %span.memJapan__lists__list__txt__head 3分
+        %h3.reason__lists__list__txt
+          %span.reason__lists__list__txt__head 3分
           ですぐに出品
-        %p.memJapan__lists__list__describe
+        %p.reason__lists__list__describe
           スマホで入力するだけで簡単に出品できる！
-      %li.memJapan__lists__list
-        .memJapan__lists__list__photo
-          %span.memJapan__lists__list__photo__num 2
+      %li.reason__lists__list
+        .reason__lists__list__photo
+          %span.reason__lists__list__photo__num 2
           %img{height: "306", src: "/assets/pict-reason-02-.jpg", width: "306"}/
-        %h3.memJapan__lists__list__txt
-          %span.memJapan__lists__list__txt__head シンプル
+        %h3.reason__lists__list__txt
+          %span.reason__lists__list__txt__head シンプル
           で使いやすい
-        %p.memJapan__lists__list__describe
+        %p.reason__lists__list__describe
           めんどくさい入力は必要なく、検索も購入もスムーズ！
-      %li.memJapan__lists__listEnd
-        .memJapan__lists__listEnd__photo
-          %span.memJapan__lists__listEnd__photo__num 3
+      %li.reason__lists__listEnd
+        .reason__lists__listEnd__photo
+          %span.reason__lists__listEnd__photo__num 3
           %img{height: "306", src: "/assets/pict-reason-03-.jpg", width: "306"}/
-        %h3.memJapan__lists__listEnd__txt
+        %h3.reason__lists__listEnd__txt
           手数料
-          %span.memJapan__lists__listEnd__txt__head 業界最安
-        %p.memJapan__lists__listEnd__discribe
+          %span.reason__lists__listEnd__txt__head 業界最安
+        %p.reason__lists__listEnd__discribe
           最大3%でお得に出品&購入！
   .middleSection
     .middleSection__inside
