商品　写真まで
写真までマークアップ完了

--- a/app/views/tweets/update.html.haml
+++ b/app/views/tweets/update.html.haml
@@ -5,15 +5,15 @@
 .main
   %section.main-section
     %h2.main-section__verification 購入内容の確認
-    %section.main__section__item
+    %section.main-section__item
       .main-section__item__buy
         .main-section__item__buy__box
           %h3.main-section__item__buy__image
-            写真だよ
+            %img.main-section__item__buy__image__up{src: "https://s3-ap-northeast-1.amazonaws.com/mercarimaster/uploads/captured_image/content/13/a007.png"}/
           .main-section__item__detail
-            %p.main-section__item__name 
+            %p.main-section__item__detail__name 
               商品入るよ
-            %p.main-section__item__price
+            %p.main-section__item__detail__price
               %span お金が入るよ
               %span (税込)送料なし
       
