--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -14,9 +14,45 @@
   .main-section{
     width:700px;
     margin:0 auto;
+    border-top:1px solid #f5f5f5;
     &__verification{
       font-size:22px;
+      text-align: center;
       padding:32px;
+    }
+    &__item{
+      border-top:1px solid #f5f5f5;
+      padding: 32px 16px;
+      &__buy{
+        margin: 0 auto;
+        text-align: center;
+        max-width:343px;
+        &__box{
+          display: flex;
+        }
+        &__image{
+          display: flex;
+          align-items: center;
+          &__up{
+            width:80px;
+          }
+        }
+      }
+      &__detail{
+        margin-left:16px;
+        &__name{
+          font-size: 14px;
+          margin: 0;
+          padding: 0 0 8px;
+          line-height: 1.5;
+          text-align: center;
+        }
+        &__price{
+          margin:0;
+          text-align: center;
+          font-size:15px;
+        }
+      }
     }
   }
 }
