--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -8,7 +8,7 @@
 .mainSection {
   width: 100%;
   height: 560px;
-  background-image: image-url("/assets/mainSection.jpg");
+  background-image: image-url("mainSection.jpg");
   background-size: cover;
   display: flex;
   align-items: center;
