--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -1,3 +1,5 @@
+=render "header"
+
 .main
   .mainSection
     .mainSection__content
@@ -172,3 +174,7 @@
                     0
                 %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
   = render partial:  "cameraBtn"
+
+=render "banner"
+
+=render "footer"
