--- a/app/views/tweets/_banner.html.haml
+++ b/app/views/tweets/_banner.html.haml
@@ -5,7 +5,5 @@
     %p.banner__inner__content
       今すぐ無料ダウンロード！
     .banner__inner__icon
-      %a.link-icon{href: "https://apps.apple.com/jp/app/music-memos/id1036437162?mt=8"}
-        = image_tag "https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg", class: "appstore-btn", size: "180x55"
-      %a.link-icon{href: "https://play.google.com/store/apps?pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1"}
-        = image_tag "https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png", class: "google-btn", size: "206x82"
+      = link_to image_tag(src= "https://linkmaker.itunes.apple.com/assets/shared/badges/ja-jp/appstore-lrg.svg", class: "appstore-btn", size: "180x55"), 'https://apps.apple.com/jp/app/music-memos/id1036437162?mt=8', class: "link-icon"
+      = link_to image_tag(src= "https://play.google.com/intl/ja/badges/static/images/badges/ja_badge_web_generic.png", class: "google-btn", size: "206x82"), 'https://play.google.com/store/apps?pcampaignid=pcampaignidMKT-Other-global-all-co-prtnr-py-PartBadge-Mar2515-1', class: "link-icon"
