--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -10,7 +10,7 @@
         フリマアプリです
       .mainSection__content__btn
         %a.mainSection__content__btn__appBtn{href: "#"}
-          %img{height: "53.33", src: "/assets/app.svg", width: "180"}/
+          %img{height: "53.33", src: "#{asset_path('app.svg')}", width: "180"}/
         %a.mainSection__content__btn__googleBtn{href: "#"}
           %img{height: "53.33", src: "/assets/goo.svg", width: "180"}/
   .reason
