--- a/app/assets/stylesheets/index.scss
+++ b/app/assets/stylesheets/index.scss
@@ -143,7 +143,7 @@
 }
 
 .middleSection {
-  background-image: url(/assets/middleSection.jpg);
+  background-image: image-url("middleSection.jpg");
   background-position: bottom right;
   height: 400px;
   background-size: cover;
