--- a/app/views/tweets/_cameraBtn.html.haml
+++ b/app/views/tweets/_cameraBtn.html.haml
@@ -1,3 +1,3 @@
 %a.cameraBtn{href: "#"}
   %span.cameraBtn__txt 出品する
-  %img.cameraBtn__icon{src: "/assets/camera__icon.svg"}/
+  %img.cameraBtn__icon{src: "#{asset_path('camera__icon.svg')}"}/
