--- a/app/views/tweets/update.html.haml
+++ b/app/views/tweets/update.html.haml
@@ -43,5 +43,5 @@
                   登録してください
 
         %section.buy-content__btn
-          %button.buy-content__btn__buy
-            = submit_tag "購入する"
+          %button.buy-content__btn__buy 購入する
+            
