--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -9,6 +9,11 @@
   padding: 0;
 }
 
+body{
+  background:#f5f5f5;;
+  min-height:100%;
+}
+
 section{
   display:block;
 }
@@ -17,9 +22,26 @@ h3{
   font-size:14px;
 }
 
+header{
+  height:128px;
+}
+
+.maim__header__image{
+  text-align: center;
+  &__logo{
+    margin:40px 0 0;
+    width: 185px;
+    height: 49px;
+    line-height: 49px;
+  }
+}
+
+
+
 .main{
   display:block;
   .main-section{
+    background:white;
     width:700px;
     margin:0 auto;
     border-top:1px solid #f5f5f5;
