--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -12,6 +12,11 @@
 body{
   background:#f5f5f5;;
   min-height:100%;
+  font-family: 'Source Sans Pro', Helvetica , Arial, '游ゴシック体', 'YuGothic', 'メイリオ', 'Meiryo', sans-serif;
+}
+
+header{
+  height:128px;
 }
 
 section{
@@ -20,10 +25,6 @@ section{
 
 h3{
   font-size:14px;
-}
-
-header{
-  height:128px;
 }
 
 .maim__header__image{
@@ -35,8 +36,6 @@ header{
     line-height: 49px;
   }
 }
-
-
 
 .main{
   display:block;
@@ -75,12 +74,15 @@ header{
           margin: 0;
           padding: 0 0 8px;
           line-height: 1.5;
-          text-align: center;
+          text-align: left;
         }
         &__price{
-          margin:0;
           text-align: center;
-          font-size:15px;
+          font-size:14px;
+          font-weight: 600;
+        }
+        &__tax{
+          font-size:12px;
         }
       }
     }
@@ -100,7 +102,6 @@ header{
         display: table;
         width:100%;
         list-style: none;
-        padding:10px;
         &__cell{
           font-weight: 600;
           display: flex;
@@ -108,13 +109,27 @@ header{
         &__label{
           text-align: left;
           font-size: 18px;
-          padding-top:6px;
+          padding-top:8px;
         }
         &__money{
-          font-size:24px;
-          padding-left:150px;
+          font-size:26px;
+          padding-left:170px;
           text-align: right;
         }
+      }
+    }
+  }
+}
+
+.buy-section__point{
+  color: #888;
+  margin:18px 0 28px;
+  &__check{
+    list-style: none;
+    font-size:16px;
+    &__box{
+      &__label{
+        font-size: 14px;
       }
     }
   }
@@ -167,5 +182,5 @@ header{
 }
 
 .fal{
-  padding-top:3.6px;
+  padding-top:3.4px;
 }
