リファクタリング
命名変更

--- a/app/views/tweets/update.html.haml
+++ b/app/views/tweets/update.html.haml
@@ -3,6 +3,7 @@
 .main
   %section.main-section
     %h2.main-section__verification 購入内容の確認
+
     %section.main-section__item
       .main-section__item__buy
         .main-section__item__buy__box
@@ -15,14 +16,14 @@
               %span ¥200
               %span.main-section__item__detail__tax (税込)送料なし
 
-    %section.buy-section__item
-      .buy-section__item__content
-        .buy-section__item__content__form
-          %ul.buy-section__item__content__form__price
-            %li.buy-section__item__content__form__price__cell
-              .buy-section__item__content__form__price__label 
+    %section.buy-section__price
+      .buy-section__price__content
+        .buy-section__price__content__form
+          %ul.buy-section__price__content__form__list
+            %li.buy-section__price__content__form__list__cell
+              .buy-section__price__content__form__list__label 
                 支払い金額
-              .buy-section__item__content__form__price__money
+              .buy-section__price__content__form__list__money
                 %span ￥200
           %ul.buy-section__point
             %li.buy-section__point__check
