--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -89,7 +89,7 @@ h3{
   }
 }
 
-.buy-section__item{
+.buy-section__price{
   padding-bottom: 48px;
   border-top:1px solid #f5f5f5;
   padding: 32px 0;
@@ -98,8 +98,7 @@ h3{
     margin:0 auto;
     &__form{
       display:block;
-      &__price{
-        display: table;
+      &__list{
         width:100%;
         list-style: none;
         &__cell{
