--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -140,7 +140,7 @@ h3{
   &__box{
     margin:4px 0 0;
     font-size: 14px;
-    &__resist{
+    &__register{
       display:flex;
       color: #0099e8;
       &__to{
@@ -157,7 +157,7 @@ h3{
     margin:4px 0 0;
     font-size: 14px;
   }
-  &__resist{
+  &__register{
     display:flex;
     color: #0099e8;
     &__to{
