--- a/app/assets/stylesheets/update.scss
+++ b/app/assets/stylesheets/update.scss
@@ -37,20 +37,24 @@ h3{
   }
 }
 
+@mixin border{
+  border-top:1px solid #f5f5f5;
+}
+
 .main{
   display:block;
   .main-section{
     background:white;
     width:700px;
     margin:0 auto;
-    border-top:1px solid #f5f5f5;
+    @include border;
     &__verification{
       font-size:22px;
       text-align: center;
       padding:32px;
     }
     &__item{
-      border-top:1px solid #f5f5f5;
+      @include border;
       padding: 32px 16px;
       &__buy{
         margin: 0 auto;
@@ -91,7 +95,7 @@ h3{
 
 .buy-section__price{
   padding-bottom: 48px;
-  border-top:1px solid #f5f5f5;
+  @include border;
   padding: 32px 0;
   &__content{
     max-width: 343px;
@@ -135,7 +139,7 @@ h3{
 }
 
 .buy-content__pay__method{
-  border-top:1px solid #f5f5f5;
+  @include border;
   padding: 32px 0;
   &__box{
     margin:4px 0 0;
@@ -151,7 +155,7 @@ h3{
 }
 
 .buy-content__address{
-  border-top:1px solid #f5f5f5;
+  @include border;
   padding: 32px 0;
   &__box{
     margin:4px 0 0;
@@ -167,7 +171,7 @@ h3{
 }
 
 .buy-content__btn{
-  border-top:1px solid #f5f5f5;
+  @include border;
   padding-bottom:0;
   padding: 32px 0;
   &__buy{
@@ -175,7 +179,6 @@ h3{
     background: #888;
     color: #fff;
     width:100%;
-    line-height: 48px;
     line-height: 48px;
   }
 }
