--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -8,6 +8,7 @@
   display: block;
   height: 100px;
   padding: 0 60px;
+  background-color: white;
   &__inner{
     width: 100%;
     max-width: 1040px;
