--- a/app/views/tweets/index.html.haml
+++ b/app/views/tweets/index.html.haml
@@ -172,3 +172,4 @@
                     0
                 %p.pickupCategory__box__items__item__link__body__name__show__tax (税込)
   = render partial:  "cameraBtn"
+  = link_to "新規会員登録", index_signup_index_path, class: 'post'
