--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -20,4 +20,4 @@
       .list-right
         .list-right__item
           = link_to "ログイン", "#", class: "login-btn"
-          = link_to "新規会員登録", "#", class: "new-member-btn"
+          = link_to '新規会員登録', signup_index_path
