--- a/app/assets/stylesheets/_singlefooter.scss
+++ b/app/assets/stylesheets/_singlefooter.scss
@@ -6,23 +6,21 @@
 }
 
 .single-footer{
-  // width: 456px;
   width: 100%;
   height: 220px;
-  // margin: 0 auto;
   background: #f5f5f5;
-            .single-footer__main{
+            &__main{
               margin: 0 auto;
               width: 456px;
               height: 220px;
               padding: 40px 0;
-              .single-fototer__private{
+              .single-footer__private{
                 @include font;
               }
-              .single-fototer__terms{
+              .single-footer__terms{
                 @include font;
               }
-              .single-fototer__transaction{
+              .single-footer__transaction{
                 @include font;
               }
               .single-footer__logo{
@@ -32,7 +30,7 @@
               }
               .single-footer__small{
 
-                .single-footer__small--character{
+                &--character{
                   font-size: 12px;
                   margin-left: 168px;
                 }
