--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -19,5 +19,5 @@
           = link_to "ブランド", "#", class:"brand-btn"
       .list-right
         .list-right__item
-          = link_to "ログイン", "#", class: "login-btn"
+          = link_to 'ログイン', new_user_session_url
           = link_to '新規会員登録', signup_index_path
