--- a/app/views/items/_singlefooter.html.haml
+++ b/app/views/items/_singlefooter.html.haml
@@ -3,7 +3,7 @@
     = link_to "プライバシーポリシー", "https://www.mercari.com/jp/privacy/", class: "single-footer__private"
     = link_to "メルカリ利用規約", "https://www.mercari.com/jp/tos/", class: "single-footer__terms"
     = link_to "特定商取引に関する表記", "https://www.mercari.com/jp/tokutei/", class: "single-footer__transaction"
-    = link_to  "https://www.mercari.com/jp/tokutei/", class: "single-footer__logo"
-      %img.single-footer__logo{ alt: "mercari", height: "65", src: "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?35314277", width: "80"}/
+    = link_to "https://www.mercari.com/jp/tokutei/", class: "single-footer__logo" do
+      = image_tag "//www-mercari-jp.akamaized.net/assets/img/common/common/logo-gray.svg?35314277", alt: "mercari", class: "single-footer__logo", height: "65", width: "80"
     %p.single-footer__small
       %small.single-footer__small--character © Furima, Inc.
