商品購入機能
マークアップ
マイグレーションファイル編集
Paysコントローラ作成
routing設定

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -35,7 +35,7 @@
           %section.buy-content__pay__method
             %h3 支払い方法
             .buy-content__pay__method__box
-              = link_to items_path, class: "buy-content__pay__method__box__register" do
+              = link_to new_pay_path, class: "buy-content__pay__method__box__register" do
                 = icon('fas', 'fa-plus-circle', class: "fal fa-plus-circle")
                 %p.buy-content__pay__method__box__register__to
                   登録してください
