--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,7 +1,3 @@
-@import 'ress';
-@import 'font-awesome-sprockets';
-@import 'font-awesome';
-
 @mixin a-font(){
   position: relative;
   display: block;
@@ -78,9 +74,9 @@ body{
       &__tabs{
         border: 0;
         background-color: #eee;
+        display: flex;
         li.mypage__main__tab-container__tabs__notice{
-          width: 345px;
-          display: inline-block;
+          width: 50%;
           text-align: center;
           vertical-align: top;
           a{
@@ -90,8 +86,7 @@ body{
           }
         }
         li{
-          width: 345px;
-          display: inline-block;
+          width: 50%;
           text-align: center;
           vertical-align: top;
           a{
@@ -168,24 +163,24 @@ body{
         }
         .mypage__main__tab-container-item__title__tabs{
           background-color: #eee;
-          li.mypage__main__tab-container-item__title__tabs__trading{
-            background-color: white;
-            width: 347px;
-            a{
-              border-top: 1px solid #ea352d;
-              @include a-font
+          display: flex;
+            li.mypage__main__tab-container-item__title__tabs__trading{
+              background-color: white;
+              width: 50%;
+              a{
+                border-top: 1px solid #ea352d;
+                @include a-font
+              }
             }
-          }
-          li{
-            background-color: #eee;
-            width: 347px;
-            display: inline-block;
-            text-align: center;
-            vertical-align: top;
-            a{
-              @include a-font
-            }
-          }         
+            li{
+              background-color: #eee;
+              width: 50%;
+              text-align: center;
+              vertical-align: top;
+              a{
+                @include a-font
+              }
+            }         
         }
         .mypage__tab-content{
           height: 300px;
@@ -201,7 +196,6 @@ body{
     float: left;
     width: 280px;
     margin: 0 40px 0 0;
-    
     li{
       border: 0;
       :hover {
