クレジットカード登録機能
クレジットカードの登録
クレジットカード登録ページ
コントローラの記述
payjp.jsにjQueryでのクレカトークン化
クレジットカード削除機能

--- a/app/assets/stylesheets/pays.scss
+++ b/app/assets/stylesheets/pays.scss
@@ -64,7 +64,7 @@ img{
   margin:0 0 0 8px;
   padding:2px 4px;
   border-radius: 2px;
-  background: rgb(41, 185, 41);
+  background: #3CCACE;
   color:#fff;
   font-size:12px;
   vertical-align:top;
@@ -130,7 +130,7 @@ img{
   width:100%;
   line-height: 48px;
   margin-top:32px;
-  background:rgb(41, 185, 41);
-  border: 1px solid rgb(41, 185, 41);
+  background:#3CCACE;
+  border: 1px solid #3CCACE;
   text-align: center;
 }
