引用先をtweetsからitemsに変更

--- a/app/views/users/logout.html.haml
+++ b/app/views/users/logout.html.haml
@@ -1,9 +1,9 @@
-= render "tweets/header"
+= render "items/header"
 .logout.clearfix
   .logout__main
     .logout__main__box
       = link_to "ログアウト","#"
   = render "side"
-= render "tweets/cameraBtn"
-= render "tweets/banner"
-= render "tweets/footer"
+= render "items/cameraBtn"
+= render "items/banner"
+= render "items/footer"
