--- a/app/views/users/show.html.haml
+++ b/app/views/users/show.html.haml
@@ -1,4 +1,4 @@
-= render "tweets/header"
+= render "items/header"
 
 .mypage.clearfix
   .mypage__main
@@ -68,97 +68,7 @@
 
 
   = render "side"
-  -# .mypage__side
-  -#   .mypage__side__nav
-  -#      %ul.mypage__side__nav__list
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           マイページ
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           お知らせ
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           やることリスト
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           いいね！一覧
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           出品する
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           出品した商品-出品中
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           出品した商品-取引中
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           出品した商品-売却済
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           購入した商品-取引中
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           購入した商品-過去の取引
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           ニュース一覧
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           評価一覧
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           ガイド
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           問い合わせ
-  -#           = icon('fas','angle-right')
-  -#   %h3.mypage__side__title
-  -#     設定
-  -#     %ul.mypage__side__title__list
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           プロフィール
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           発送元、お届け先住所変更
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           支払い方法
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           メール/パスワード
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           本人情報
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           電話番号の確認
-  -#           = icon('fas','angle-right')
-  -#       %li
-  -#         = link_to "#", class: "mypage__side__nav__list__item" do
-  -#           ログアウト
-  -#           = icon('fas','angle-right')
 
-= render "tweets/cameraBtn"
-= render "tweets/banner"
-= render "tweets/footer"
+= render "items/cameraBtn"
+= render "items/banner"
+= render "items/footer"
