--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -21,4 +21,4 @@
         .list-right__item
           = link_to "ログイン", "#", class: "login-btn"
           = link_to "新規会員登録", "#", class: "new-member-btn"
-          = link_to "マイページ", "/users/loginid", class: "mypage-btn"
+          = link_to "マイページ", mypage_users_path, class: "mypage-btn"
