--- a/app/views/users/_side.html.haml
+++ b/app/views/users/_side.html.haml
@@ -85,6 +85,6 @@
           電話番号の確認
           = icon('fas','angle-right')
       %li
-        = link_to "/users/logout", class: "mypage__side__nav__list__item" do
+        = link_to logout_users_path, class: "mypage__side__nav__list__item" do
           ログアウト
           = icon('fas','angle-right')
