--- a/app/views/pays/show.html.haml
+++ b/app/views/pays/show.html.haml
@@ -1,10 +1,21 @@
-%label 登録クレジットカード
-%br
-= "**** **** ****" +@default_card_information.last4
-%br
-- exp_month = @default_card_information.exp_month.to_s
-- exp_year  = @default_card_information.exp_year.to_s.slice(2,3)
-= exp_month + "/" + exp_year
-= form_tag(delete_pays_path, method: :post, id: 'charge-form',name: "inputForm") do
-  %input{ type: "hidden",name: "card_id", value:""}
-  %button 削除する
+.main
+  %section.main-pay
+    %h2.main-pay__head
+      支払い方法
+    .card__show
+      %section.card__show__box
+        .card__show__box__register
+          %h3.card__show__box__register__list クレジットカード一覧
+          .card__detail
+            .card__detail__number
+              = "**** **** ****" +@default_card_information.last4
+            - exp_month = @default_card_information.exp_month.to_s
+            - exp_year  = @default_card_information.exp_year.to_s.slice(2,3)
+            .card__detail__time
+              = exp_month + "/" + exp_year
+            = form_tag(delete_pays_path, method: :post, id: 'charge-form',class: "card__detail__submit",name: "inputForm") do
+              %input{ type: "hidden",name: "card_id", value:""}
+              %button.card__detail__submit__button 削除する
+          .pay__regist
+            = link_to "#", class: "pay__regist__to" do
+              %span 支払い方法について
