--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -93,6 +93,7 @@
                   %a{href:"#"}
                     %i.fa.fa-flag
                     不適切な商品の通報
+            %a.item-buy-btn{href:item_path}購入画面に進む
           .commentBox
             %ul.commentContents
             %form#new_comment.new_comment{"accept-charset":"UTF-8", action:"#", method:"post"}
