--- a/app/views/pays/new.html.haml
+++ b/app/views/pays/new.html.haml
@@ -8,7 +8,7 @@
       .main-pay__form__detail
         %label.form-label カード番号
         %span.form-require 必須
-        = text_field_tag "number", "", class: "main-pay__form__number", placeholder: "半角数字のみ", maxlength: "16",type: "text", id: "card_number"
+        = text_field_tag "number", "", class: "main-pay__form__number", placeholder: "半角数字のみ", maxlength: "16",type: "text", id: "card_number",name: "card_number"
         %ul.main-pay__form__card
           %li.main-pay__form__card__list
             %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/visa.svg?3678719749", :width => "49"}/
@@ -18,6 +18,7 @@
             %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/american_express.svg?3678719749", :width => "21"}/
             %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/dinersclub.svg?3678719749", :width => "32"}/
             %img{:alt => "", :height => "20", :src => "//www-mercari-jp.akamaized.net/assets/img/card/discover.svg?3678719749", :width => "32"}/
+          #card_number_error
         .pay__form
           %label.form-label 有効期限
           %span.form-require 必須
@@ -54,10 +55,11 @@
                 %option{value: "2029"}29
               %span 年
             %br
+          #exp_date_error
         .pay__form
           %label.form-label セキュリティコード
           %span.form-require 必須
-          = text_field_tag "cvc", "", class: "pay__form__security", placeholder: "カード背面3〜４桁の番号", maxlength: "4",id: "cvc"
+          = text_field_tag "cvc", "", class: "pay__form__security", placeholder: "カード背面3〜４桁の番号", maxlength: "4",id: "cvc", name: "cvc"
         .pay__note
           .pay__note__text
             %span.pay__note__text__question ? 
