商品購入の流れ変更
カード登録→購入確認→トップページに変更。
メッセージ追加

--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -48,6 +48,7 @@
                 %p.buy-content__address__register__to
                   登録してください
 
-        %section.buy-content__btn
-          %button.buy-content__btn__buy 購入する
+        = form_tag(controller: :purchase, action: :index, method: :get) do
+          %section.buy-content__btn
+            %button.buy-content__btn__buy 購入する
             
