--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -1,9 +1,3 @@
-* {
-  background-repeat: no-repeat;
-  margin: 0;
-  padding: 0;
-}
-
 body{
   background:#f5f5f5;;
   min-height:100%;
@@ -168,10 +162,10 @@ h3{
 .buy-content__btn{
   @include border;
   padding-bottom:0;
-  padding: 32px 0;
+  padding: 12px 0;
   &__buy{
-    border: 1px solid #888;
-    background: #888;
+    border: 1px solid #3CCACE;
+    background:#3CCACE;
     color: #fff;
     width:100%;
     line-height: 48px;
